# HAMS

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  RH56_HANDOFF.md  RUNBOOK.md
assets/: README.md  h1_2_handless.urdf  h1_2_handless.xml  magpie_gripper.usda  scene_handless.xml  scene_handless_pelvis_fixed.xml
assets/Payload/: Geometry.usda
assets/env_assets/ikea_table_usd/resource/v_69323/: link_0.usd
assets/ikea_table_usd/resource/: material.usd
assets/isaac_assets/Payload/: Contents.usda  GeometryLibrary.usdc  Materials.usda  MaterialsLibrary.usdc  Physics.usda
assets/isaac_assets/ikea_table_usd/: model_PINNTORP_table_light_brown_stained_white_stained_185x75cm.usd
assets/mujoco_assets/: h1_2_handless.xml  h1_2_magpie.xml  h1_2_magpie_eflesh.xml  magpie.xml  magpie_eflesh.xml  magpie_eflesh_h12.xml  ur5_magpie.xml  ur5_magpie_eflesh.xml
assets/ros_assets/: h1_2.urdf  h1_2_handless.urdf  h1_2_handless_ros.urdf  h1_2_handless_sphere.urdf  h1_2_magpie.urdf  h1_2_magpie_ros.urdf  h1_2_sphere.urdf
core_ws/src/h12_deploy_mjpc/: CMakeLists.txt  package.xml
core_ws/src/h12_deploy_mjpc/config/: controller.yaml
core_ws/src/h12_deploy_mjpc/h12_deploy_mjpc/: estimator_node.py
core_ws/src/h12_deploy_mjpc/src/: controller_node.cpp  mjpc_deploy_lowerbody_controller.cpp  mjpc_deploy_lowerbody_controller.hpp  mjpc_glue.hpp
core_ws/src/h12_lowerbody_controller/: package.xml  setup.cfg  setup.py
core_ws/src/h12_lowerbody_controller/example/: walkingPolicy.pt
core_ws/src/h12_lowerbody_controller/h12_lowerbody_controller/: policy.py  policy_manager.py
core_ws/src/h12_lowerbody_controller/h12_lowerbody_controller/mjpc/: __init__.py  agent_client.py  constants.py  control.py  state_estimation.py
core_ws/src/h12_lowerbody_controller/h12_lowerbody_controller/new_policy_file/: h1_2_rma_magpie_jun10_torso_neg10.yaml
core_ws/src/h12_lowerbody_controller/h12_lowerbody_controller/rma/: __init__.py
core_ws/src/h12_lowerbody_controller/h12_lowerbody_controller/scripts/: fame_node.py  lowerbody_controller_node.py  mjpc_node.py  walking_node.py
core_ws/src/h12_lowerbody_controller/policies/fame/: encoder_3800.pt  fame.yaml  policy.pt
core_ws/src/h12_lowerbody_controller/policies/walk/: walk.yaml
core_ws/src/h12_lowerbody_controller/reference/: README.md  standalone_fame_test.py
core_ws/src/h12_lowerbody_controller/test/: test_state_estimation.py
core_ws/src/h12_lowerbody_rl/: package.xml  setup.cfg  setup.py
core_ws/src/h12_lowerbody_rl/h12_lowerbody_rl/: policy.py  policy_manager.py
core_ws/src/h12_lowerbody_rl/h12_lowerbody_rl/new_policy_file/: encoder_3600.pt  policy_3600.pt
core_ws/src/h12_lowerbody_rl/h12_lowerbody_rl/scripts/: fame_node.py  lowerbody_controller_node.py  walking_node.py
core_ws/src/h12_lowerbody_rl/policies/fame/: fame.yaml
core_ws/src/h12_lowerbody_rl/policies/walk/: walk.yaml
core_ws/src/h12_lowerbody_rl/reference/: README.md  mujoco_deploy_h12_rma.py  standalone_fame_test.py
core_ws/src/h12_skills/: graspgenx_smoke_test.py  package.xml  setup.cfg  setup.py
core_ws/src/h12_skills/h12_skills/: base.py  graspgen_server.py  model_logging.py  node.py  perception_utils.py  skills.py
core_ws/src/h12_skills/h12_skills/skills/: __init__.py  close_door.py  close_lid.py  grasp.py  navigate.py  open_door.py  open_lid.py  pick_place.py  press.py  slide_rack.py  turn.py
core_ws/src/h12_skills/weights/: .gitattributes  README.md
core_ws/src/h12_skills/weights/release/dis/: epoch_1056.pth
core_ws/src/h1_bringup/: package.xml  setup.cfg  setup.py
core_ws/src/h1_bringup/config/: mid360.yaml  nav2_config.yaml  sim_network.yaml  slam_toolbox_h1.yaml
core_ws/src/h1_bringup/h1_bringup/: push_red_cube.py  sim_joint_state_publisher.py  slider_debugger.py  wrist_slider_gui.py
core_ws/src/h1_bringup/launch/: h1_navigation.launch.py  h1_real_desktop_bringup.launch.py  h1_real_drivers.launch.py  h1_real_robot_bringup.launch.py  h1_real_sensors.launch.py  h1_sim_bringup.launch.py
core_ws/src/h1_bringup/rviz/: sim.rviz
core_ws/src/h1_bringup/scripts/: detect_and_move.py  diagnose_lowcmd.py  open_fridge.py  rh56_grasp_demo.py  slider_debugger.py  walk_to_fridge.py
core_ws/src/model_server/: .gitignore  README.md  package.xml  setup.cfg  setup.py
core_ws/src/model_server/model_server/: gemini_server.py  graspgen_server.py  model_logging.py  sam_server.py
core_ws/src/model_server/weights/: .gitattributes  .gitignore  README.md  sam3.pt
core_ws/src/model_server/weights/graspgen/release/dis/: config.yaml
docker/: .env.example  .gitignore  BUILD.md  BaseDockerfile  IsaacDockerfile  MujocoDockerfile  RobocasaDockerfile  RosDockerfile  docker-compose.yml
docker/scripts/: dds_bridge.py  docker_build.sh  docker_run.sh  launch_isaac.sh  launch_mujoco.sh  launch_robocasa.sh  launch_ros.sh  rebuild_mjpc.sh
exts/dds_bridge_cpp/: CMakeLists.txt
exts/dds_bridge_cpp/src/: main.cpp
exts/isaac_exts/cl_load_rs/cl_load_rs_python/: extension.py  global_variables.py  realsense.py
exts/isaac_exts/cl_load_rs/cl_load_rs_python/CL_scripts/: publish_depth_data.py
exts/isaac_exts/cl_load_rs/cl_load_rs_python/CL_scripts/render_test_scripts/: save_render_product.py
exts/isaac_exts/cl_load_rs/cl_load_rs_python/CL_scripts/rs_asset_test_scripts/: glue.py  move.py  (+1 more)
exts/isaac_exts/cl_load_rs/config/: extension.toml
exts/isaac_exts/cl_load_rs/docs/: CHANGELOG.md
exts/isaac_exts/cl_reset_button/cl_reset_button_python/: extension.py
exts/isaac_exts/cl_reset_button/config/: extension.toml
h1_robocasa/: h12_mujoco.py  h1_2_robosuite.py  magpie_hand_bridge.py  unitree_interface.py
isaac_exts/cl_load_rs/cl_load_rs_python/: extension.py  realsense.py
isaac_exts/cl_load_rs/cl_load_rs_python/CL_scripts/: README.md  publish_rgb_data.py
isaac_exts/cl_load_rs/cl_load_rs_python/CL_scripts/ros_test_scripts/: get_depth_data.py  pub_camera_info_render.py
isaac_exts/cl_load_rs/cl_load_rs_python/CL_scripts/rs_asset_test_scripts/: glue_left.py
scripts/: dds_bridge.py  docker_build.sh  docker_run.sh  launch.sh  test.txt
