<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>h12_deploy_mjpc</name>
  <version>0.0.0</version>
  <description>MJPC lower-body balance controller for the Unitree H1-2: a rclcpp
    node embedding mjpc::Agent (fed unitree_hg /lowstate + a proprioceptive
    unitree_go/SportModeState base estimate) publishing 12-leg setpoints to the
    safety layer, plus a rclpy proprioceptive base estimator. Ported from
    badinkajink/mujoco_mpc@extended_hw:mjpc/deploy.</description>
  <maintainer email="maxlconway@gmail.com">maxconway</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- C++ controller -->
  <depend>rclcpp</depend>
  <depend>unitree_hg</depend>
  <depend>unitree_go</depend>
  <depend>std_srvs</depend>
  <!-- mujoco_mpc (mjpc::Agent) is provided by the deploy image at MJPC_ROOT, not rosdep -->

  <!-- Python estimator (unitree_go / unitree_hg already covered by <depend> above) -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <!-- mujoco (python) is pip-installed in the image; no rosdep key -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
