<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>model_server</name>
  <version>0.0.0</version>
  <description>Self-contained ROS 2 service servers for Gemini, SAM3, and GraspGenX.</description>
  <maintainer email="maxlconway@gmail.com">max</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>custom_ros_messages</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>python3-numpy</depend>
  <exec_depend>python3-opencv</exec_depend>

  <!-- pip-only deps (no rosdep keys); installed in the ros container:
       gemini_server:   google-genai, pillow
       sam_server:      torch, pillow, sam3
       graspgen_server: torch, graspgenx -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
